[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "print_btree"
version = "0.0.9"
authors = [
  { name="Liu Zuo Lin", email="zlliu246@gmail.com" },
]
description = "A package that prints binary trees in terminal"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zlliu246/print_btree"
Issues = "https://github.com/zlliu246/print_btree/issues"